--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -24,26 +24,20 @@
 
   <!-- Main Content -->
   <main>
-    <section aria-labelledby="intro-heading">
-      <h2 id="intro-heading">Welcome to TechCon 2024</h2>
+    <section>
+      <h2>Welcome to TechCon 2024</h2>
       <p>
         TechCon 2024 is a global technology conference bringing together
         industry leaders, innovators, students, and enthusiasts to explore
         advances in software, AI, robotics, cybersecurity, and more.
       </p>
 
-      <!-- Promotional Video (accessible) -->
-      <figure>
-        <figcaption>Promo: A short introduction to TechCon 2024 (captions available).</figcaption>
-        <video controls width="720" aria-describedby="promo-desc">
-          <!-- replace promo.mp4 with your real file if you add one -->
-          <source src="promo.mp4" type="video/mp4" />
-          <!-- captions file (optional) -->
-          <track kind="captions" src="promo.vtt" srclang="en" label="English captions" />
-          Sorry — your browser does not support embedded videos. Visit our <a href="about.html">About page</a>.
-        </video>
-        <p id="promo-desc" hidden>Short promotional video for TechCon 2024. Includes highlights of speakers and topics.</p>
-      </figure>
+      <!-- Promotional Video -->
+      <video controls width="600">
+        <source src="promo.mp4" type="video/mp4" />
+        <track kind="captions" src="promo.vtt" srclang="en" label="English" />
+        Your browser does not support the video tag.
+      </video>
     </section>
   </main>
 
