--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -23,7 +23,7 @@
 
     <!-- Main Content Section -->
     <main>
-        <table border="1">
+        <table>
             <caption>Detailed Schedule of Events for TechCon 2024</caption>
             <thead>
                 <tr>
@@ -59,7 +59,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved.</p>
+        <p>copyright 2024 TechCon. All rights reserved.</p>
     </footer>
 
 </body>
